--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Muhammad Bilal</h1>
-    <img src="../images/Bilal.jpg" alt="Bilal" height="200">
+    <img src="./images/Bilal.jpg" alt="Bilal" height="200">
     <hr>
     <!-- Summary or objective statement -->
     <h2>Objectives</h2>
